# yesod-gitrev

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  stack-nightly.yaml  stack.yaml  yesod-gitrev.cabal
examples/: ExampleMain.hs  ExampleTH.hs  Main.hs
src/Yesod/: GitRev.hs
src/Yesod/GitRev/: Data.hs
tests/: TestExamples.hs
