name:                yesod-gitrev
version:             0.1.0.0
synopsis:
  A subsite for displaying git information.
author:              Dan Burton
maintainer:          danburton.email@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Yesod.GitRev
  other-modules:
      Yesod.GitRev.Data
  build-depends:
      base >=4 && <5
    , yesod-core
    , gitrev
    , template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
